compiler/tools/fpp-check/test/connection_pattern/undef_target.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/undef_target.fpp:10.5
    c
    ^
error: cannot find component instance `c` in this scope
